fixed layout problems

--- a/frontend/src/app/common.sass
+++ b/frontend/src/app/common.sass
@@ -1,3 +1,7 @@
 $font-family: "Ubuntu", sans-serif
-$primary: #6a1b9a
+$primary: #38006b
+
 $accent: #ffff6b
+
+$bg: #424242
+$fg: white
