--- a/frontend/src/app/event-feed/event-feed.component.sass
+++ b/frontend/src/app/event-feed/event-feed.component.sass
@@ -6,7 +6,7 @@ h3
   height: 90%
   display: flex
   flex-direction: row
-  justify-content: space-between
+  justify-content: flex-start
   align-items: flex-start
   flex-wrap: wrap
   overflow-y: scroll
@@ -16,8 +16,11 @@ h3
     width: 100%
 
     @media (min-width: '500px')
-      width: 45%
+      width: 46%
 
     @media (min-width: '800px')
-      width: 25%
+      width: 30%
+
+    @media (min-width: '1100px')
+      width: 23%
 
